--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "watch": "webpack --watch",
     "start:dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.js --history-api-fallback",
     "dev-server": "NODE_ENV=production node server.js",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production babel-node --presets es2015 server.js"
   },
   "author": "Madhur Garg <madhur@hipbar.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
