--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "antd": "^3.5.2",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
