transform-class-properties

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
   "presets": ["es2015", "react"],
-  "plugins": ["syntax-dynamic-import", "syntax-object-rest-spread",  ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]]
+  "plugins": [
+    "syntax-dynamic-import",
+    "syntax-object-rest-spread",
+    ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }],
+    "transform-class-properties"
+  ]
 }
