--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "antd": "^3.5.2",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
