--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Madhur Garg <madhur@hipbar.com>",
   "license": "ISC",
   "devDependencies": {
+    "abspath-webpack-plugin": "0.0.1",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.7.0",
@@ -44,13 +45,18 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@auth0/cosmos": "^0.2.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "styled-components": "^3.3.2"
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "styled-components": "^3.3.2",
+    "whatwg-fetch": "^2.0.4"
   }
 }
