added momentjs,babel-polyfill, react-day-picker, pagination

--- a/package.json
+++ b/package.json
@@ -46,11 +46,15 @@
   },
   "dependencies": {
     "@auth0/cosmos": "^0.2.3",
+    "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.2",
+    "react-js-pagination": "^3.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
