--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.2",
     "react-js-pagination": "^3.0.2",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
