--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.3.2",
     "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.2",
+    "react-gmaps": "^1.9.0",
     "react-js-pagination": "^3.0.2",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
