--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
+    "rc-time-picker": "^3.3.1",
     "react": "^16.3.2",
     "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.2",
