--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "watch": "webpack --watch",
     "start:dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.js --history-api-fallback",
     "dev-server": "NODE_ENV=production node server.js",
-    "start": "NODE_ENV=production babel-node --presets es2015 server.js"
+    "start": "NODE_ENV=production babel-node --presets es2015 server.js",
+    "storybook": "start-storybook -p 6006 -c .storybook",
+    "build-storybook": "build-storybook"
   },
   "author": "Madhur Garg <madhur@hipbar.com>",
   "license": "ISC",
@@ -41,7 +43,12 @@
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.3",
     "webpack-hot-middleware": "^2.22.1",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "@storybook/react": "^4.0.12",
+    "@storybook/addon-actions": "^4.0.12",
+    "@storybook/addon-links": "^4.0.12",
+    "@storybook/addons": "^4.0.12",
+    "@babel/core": "^7.2.0"
   },
   "dependencies": {
     "@auth0/cosmos": "^0.2.3",
