not possible to commit after long time

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
-    "watch": "webpack --watch",
+    "watch": "webpack --watch --config webpack.dev.js",
     "start:dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.js --history-api-fallback",
     "dev-server": "NODE_ENV=production node server.js",
     "start": "NODE_ENV=production babel-node --presets es2015 server.js",
@@ -58,9 +58,9 @@
     "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "rc-time-picker": "^3.3.1",
-    "react": "^16.3.2",
+    "react": "^16.6.3",
     "react-day-picker": "^7.1.9",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.6.3",
     "react-gmaps": "^1.9.0",
     "react-js-pagination": "^3.0.2",
     "react-motion": "^0.5.2",
