--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "author": "Madhur Garg <madhur@hipbar.com>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.2.0",
+    "@storybook/addon-actions": "^4.0.12",
+    "@storybook/addon-links": "^4.0.12",
+    "@storybook/addons": "^4.0.12",
+    "@storybook/react": "^4.0.12",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.7.0",
@@ -38,17 +43,10 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.3",
     "webpack-hot-middleware": "^2.22.1",
-    "webpack-merge": "^4.1.2",
-    "@storybook/react": "^4.0.12",
-    "@storybook/addon-actions": "^4.0.12",
-    "@storybook/addon-links": "^4.0.12",
-    "@storybook/addons": "^4.0.12",
-    "@babel/core": "^7.2.0"
+    "webpack-merge": "^4.1.2"
   },
   "dependencies": {
     "@auth0/cosmos": "^0.2.3",
@@ -70,6 +68,8 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.3.2",
+    "webpack": "^4.28.0",
+    "webpack-cli": "^3.1.2",
     "whatwg-fetch": "^2.0.4"
   }
 }
