Added UI for overview

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
     "watch": "webpack --watch --config webpack.dev.js",
-    "start:dev": "NODE_ENV=development webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --history-api-fallback",
+    "start:dev": "BASE_URL=amebae21.hasura-app.io NODE_ENV=development webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --history-api-fallback",
     "dev-server": "NODE_ENV=production node server.js",
     "start": "NODE_ENV=production babel-node --presets es2015 server.js",
     "storybook": "start-storybook -p 6006 -c .storybook",
@@ -54,6 +54,7 @@
   "dependencies": {
     "@auth0/cosmos": "^0.2.3",
     "babel-polyfill": "^6.26.0",
+    "chart.js": "^2.7.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
@@ -61,6 +62,7 @@
     "prop-types": "^15.6.1",
     "rc-time-picker": "^3.3.1",
     "react": "^16.6.3",
+    "react-chartjs-2": "^2.7.4",
     "react-day-picker": "^7.1.9",
     "react-dom": "^16.6.3",
     "react-gmaps": "^1.9.0",
