--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production webpack --config webpack.prod.js",
     "watch": "webpack --watch --config webpack.dev.js",
-    "start:dev": "BASE_URL=amebae21.hasura-app.io NODE_ENV=development webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --history-api-fallback",
+    "start:local": "BASE_URL=hipbar-dev.com NODE_ENV=development webpack-dev-server --config webpack.dev.js --disable-host-check",
+    "start:dev": "BASE_URL=hipbar-dev.com NODE_ENV=development webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --history-api-fallback",
     "dev-server": "NODE_ENV=production node server.js",
     "start": "NODE_ENV=production babel-node --presets es2015 server.js",
     "storybook": "start-storybook -p 6006 -c .storybook",
@@ -17,65 +18,65 @@
   "author": "Madhur Garg <madhur@hipbar.com>",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@storybook/addon-actions": "^4.0.12",
-    "@storybook/addon-links": "^4.0.12",
-    "@storybook/addons": "^4.0.12",
-    "@storybook/react": "^4.0.12",
+    "@babel/core": "^7.6.2",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-import": "^1.7.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.12.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-object-rest-spread": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "compression-webpack-plugin": "^1.1.11",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^1.1.11",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.5.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.9.0",
     "prop-types": "^15.7.2",
-    "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.3",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.8.1",
     "webpack-hot-middleware": "^2.22.1",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@auth0/cosmos": "^0.2.3",
+    "@auth0/cosmos": "^0.31.0",
     "babel-polyfill": "^6.26.0",
     "chart.js": "^2.7.3",
     "express": "^4.16.3",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.15",
     "moment": "^2.22.2",
     "prettier": "^1.16.4",
-    "rc-time-picker": "^3.3.1",
-    "react": "^16.6.3",
-    "react-chartjs-2": "^2.7.4",
-    "react-day-picker": "^7.1.9",
-    "react-dom": "^16.6.3",
+    "rc-time-picker": "^3.7.2",
+    "react": "^16.10.1",
+    "react-chartjs-2": "^2.8.0",
+    "react-day-picker": "^7.3.2",
+    "react-dom": "^16.10.1",
     "react-gmaps": "^1.9.0",
     "react-js-pagination": "^3.0.2",
     "react-motion": "^0.5.2",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
-    "styled-components": "^3.3.2",
-    "webpack": "^4.28.0",
-    "webpack-cli": "^3.1.2",
-    "whatwg-fetch": "^2.0.4"
+    "react-redux": "^7.1.1",
+    "react-router": "^5.1.1",
+    "react-router-dom": "^5.1.1",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
+    "styled-components": "^4.4.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "whatwg-fetch": "^3.0.0"
   }
 }
