Updated redux syntax

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-  "presets": ["es2015", "react"],
+  "presets": [
+    "@babel/preset-react",
+    "@babel/preset-env"
+  ],
   "plugins": [
     "syntax-dynamic-import",
     "syntax-object-rest-spread",
